tests/baselines/reference/ParameterList5.errors.txt
==== tests/cases/compiler/ParameterList5.ts (3 errors) ====
    function A(): (public B) => C {
                  ~~~~~~~~~~~~~~~
!!! error TS2355: A function whose declared type is neither 'void' nor 'any' must return a value or consist of a single 'throw' statement.
                   ~~~~~~~~
!!! error TS2369: A parameter property is only allowed in a constructor implementation.
                                ~
!!! error TS2304: Cannot find name 'C'.
    }